--- a/bip-xxxx.mediawiki
+++ b/bip-xxxx.mediawiki
@@ -1,6 +1,6 @@
 <pre>
   BIP: xxxx
-  Title: Shamir Sharing of Private Keys
+  Title: Shamir's Secret Sharing Scheme
   Author: Matt Whitlock <bip@mattwhitlock.name>
   Status: Draft
   Type: Informational
@@ -9,7 +9,7 @@
 
 == Abstract ==
 
-A method is described for decomposing a Bitcoin private key into shares in a manner such that the key can be reconstituted from any sufficiently large subset of the shares but such that individually the shares do not reveal any information about the key. This method is commonly known as Shamir's Secret Sharing Scheme. Additionally, an encoding methodology is proposed to standardize transmission and storage of shares.
+A method is described for decomposing a secret (which may be a Bitcoin private key or a [https://github.com/bitcoin/bips/blob/master/bip-0032.mediawiki BIP32] master seed) into shares in a manner such that the secret can be reconstituted from any sufficiently large subset of the shares but such that individually the shares do not reveal any information about the secret. This method is commonly known as Shamir's Secret Sharing Scheme. Additionally, an encoding methodology is proposed to standardize transmission and storage of shares.
 
 == Copyright ==
 
@@ -17,43 +17,78 @@ This proposal is hereby placed in the public domain.
 
 == Specification ==
 
-* Define <code>uint256_t</code> as a data type whose value space is the set of all unsigned 256-bit integers.
-* Define <code>uint256_t</code> ''K'' as the private key.
-* Define ''M'' as the minimum number of shares needed to reconstitute the private key.
-* Define <code>uint256_t</code> ''N'' as the order of the generator point in the [https://en.bitcoin.it/wiki/Secp256k1 secp256k1] elliptic curve.
-* Define <code>SHA256</code>(''m'') as a function that:
-*# accepts as an argument a <code>uint256_t</code> ''m'',
-*# computes the [http://en.wikipedia.org/wiki/SHA-2 SHA-256] message digest of a message consisting of the 256-bit binary encoding of ''m'' in big-endian byte order,
-*# interprets the resulting message digest as the 256-bit binary encoding of a <code>uint256_t</code> ''d'' in big-endian byte order,
-*# returns ''d''.
+* Define ''K'' as the secret, which is an unsigned integer of arbitrary precision.
+* Define ''L'' as the precision of the secret, in bits. For an ordinary Bitcoin private key, ''L'' = 256.
+* Define ''P''<sub>''L''</sub> as the largest prime number that is less than 2<sup>''L''</sup>.
+** ''P''<sub>128</sub> := 2<sup>128</sup> − 159.
+** ''P''<sub>192</sub> := 2<sup>192</sup> − 237.
+** ''P''<sub>256</sub> := 2<sup>256</sup> − 189.
+** ''P''<sub>384</sub> := 2<sup>384</sup> − 317.
+** ''P''<sub>512</sub> := 2<sup>512</sup> − 569.
+* Define ''M'' as the minimum number of shares to be required when reconstituting the secret.
+* Define Hash<sub>''L''</sub>(''m'') as a function that:
+*# accepts an argument ''m'', which is an unsigned integer of precision ''L'',
+*# computes the [http://en.wikipedia.org/wiki/SHA-2 SHA-512] message digest of a message consisting of the ''L''-bit binary encoding of ''m'' in big-endian byte order,
+*# interprets the resulting message digest as the 512-bit binary encoding of an unsigned integer ''d'' in big-endian byte order,
+*# returns ''d'' mod ''P''<sub>''L''</sub>.
 
-=== Derivation of Shares from Private Key ===
+=== Derivation of Shares from Secret ===
 
-# Let <code>uint256_t</code> ''a''<sub>0</sub> := ''K''.
-# Let <code>uint256_t</code> ''a''<sub>''i''</sub> := <code>SHA256</code>(''a''<sub>''i''−1</sub>) for 1 ≤ ''i'' &lt; ''M''.
-# Let <code>uint256_t</code> ''x''<sub>''j''</sub> := ''j'' + 1 for 0 ≤ ''j'' &lt; ''N''−1.
-# Let <code>uint256_t</code> ''y''<sub>''j''</sub> := ''a''<sub>0</sub>·''x''<sub>''j''</sub><sup>0</sup> + ''a''<sub>1</sub>·''x''<sub>''j''</sub><sup>1</sup> + … + ''a''<sub>''M''−1</sub>·''x''<sub>''j''</sub><sup>''M''−1</sup> (mod ''N'') for 0 ≤ ''j'' &lt; ''N''−1.
-# The shares are the ordered pairs (''x''<sub>''j''</sub>, ''y''<sub>''j''</sub>) for 0 ≤ ''j'' &lt; ''N''−1.
+# Let ''a''<sub>0</sub> := ''K''.
+# Let ''a''<sub>''i''</sub> := Hash<sub>''L''</sub>(''a''<sub>''i''−1</sub>) for 1 ≤ ''i'' &lt; ''M''.
+# Let ''x''<sub>''j''</sub> := ''j'' + 1 for 0 ≤ ''j'' &lt; ''P''<sub>''L''</sub>−1.
+# Let ''y''<sub>''j''</sub> := ''a''<sub>0</sub>·''x''<sub>''j''</sub><sup>0</sup> + ''a''<sub>1</sub>·''x''<sub>''j''</sub><sup>1</sup> + … + ''a''<sub>''M''−1</sub>·''x''<sub>''j''</sub><sup>''M''−1</sup> (mod ''P''<sub>''L''</sub>) for 0 ≤ ''j'' &lt; ''P''<sub>''L''</sub>−1.
+# The shares are the ordered pairs (''x''<sub>''j''</sub>, ''y''<sub>''j''</sub>) for 0 ≤ ''j'' &lt; ''P''<sub>''L''</sub>−1.
 
-=== Reconstitution of Private Key from Shares ===
+=== Reconstitution of Secret from Shares ===
 
 # Let (''x''<sub>''i''</sub>, ''y''<sub>''i''</sub>) be any ''M'' distinct shares for 0 ≤ ''i'' &lt; ''M''.
-# Let <code>uint256_t</code> ''n''<sub>''i''</sub> := ''x''<sub>0</sub> · … · ''x''<sub>''i''−1</sub> · ''x''<sub>''i''+1</sub> · … · ''x''<sub>''M''−1</sub> (mod ''N'') for 0 ≤ ''i'' &lt; ''M''.
-#* That is, ''n''<sub>''i''</sub> is the product (mod ''N'') of all ''x''<sub>''j''</sub> for 0 ≤ ''j'' &lt; ''M'' and ''j'' ≠ ''i''.
-# Let <code>uint256_t</code> ''d''<sub>''i''</sub> := (''x''<sub>0</sub>−''x''<sub>''i''</sub>) · … · (''x''<sub>''i''−1</sub>−''x''<sub>''i''</sub>) · (''x''<sub>''i''+1</sub>−''x''<sub>''i''</sub>) · … · (''x''<sub>''M''−1</sub>−''x''<sub>''i''</sub>) (mod ''N'') for 0 ≤ ''i'' &lt; ''M''.
-#* That is, ''d''<sub>''i''</sub> is the product (mod ''N'') of all ''x''<sub>''j''</sub>−''x''<sub>''i''</sub> for 0 ≤ ''j'' &lt; ''M'' and ''j'' ≠ ''i''.
-# Let <code>uint256_t</code> ''a''<sub>0</sub> := ''y''<sub>0</sub>·''n''<sub>0</sub>·''d''<sub>0</sub><sup>-1</sup> + ''y''<sub>1</sub>·''n''<sub>1</sub>·''d''<sub>1</sub><sup>-1</sup> + … + ''y''<sub>''M''−1</sub>·''n''<sub>''M''−1</sub>·''d''<sub>''M''−1</sub><sup>-1</sup> (mod ''N'').
-# The private key is ''a''<sub>0</sub>.
+# Let ''n''<sub>''i''</sub> := ''x''<sub>0</sub> · … · ''x''<sub>''i''−1</sub> · ''x''<sub>''i''+1</sub> · … · ''x''<sub>''M''−1</sub> (mod ''P''<sub>''L''</sub>) for 0 ≤ ''i'' &lt; ''M''.
+#* That is, ''n''<sub>''i''</sub> is the product (mod ''P''<sub>''L''</sub>) of all ''x''<sub>''j''</sub> for 0 ≤ ''j'' &lt; ''M'' and ''j'' ≠ ''i''.
+# Let ''d''<sub>''i''</sub> := (''x''<sub>0</sub>−''x''<sub>''i''</sub>) · … · (''x''<sub>''i''−1</sub>−''x''<sub>''i''</sub>) · (''x''<sub>''i''+1</sub>−''x''<sub>''i''</sub>) · … · (''x''<sub>''M''−1</sub>−''x''<sub>''i''</sub>) (mod ''P''<sub>''L''</sub>) for 0 ≤ ''i'' &lt; ''M''.
+#* That is, ''d''<sub>''i''</sub> is the product (mod ''P''<sub>''L''</sub>) of all ''x''<sub>''j''</sub>−''x''<sub>''i''</sub> for 0 ≤ ''j'' &lt; ''M'' and ''j'' ≠ ''i''.
+# Let ''a''<sub>0</sub> := ''y''<sub>0</sub>·''n''<sub>0</sub>·''d''<sub>0</sub><sup>-1</sup> + ''y''<sub>1</sub>·''n''<sub>1</sub>·''d''<sub>1</sub><sup>-1</sup> + … + ''y''<sub>''M''−1</sub>·''n''<sub>''M''−1</sub>·''d''<sub>''M''−1</sub><sup>-1</sup> (mod ''P''<sub>''L''</sub>).
+# The secret is ''a''<sub>0</sub>.
 
 === Encoding of Shares ===
 
 This encoding scheme is applicable to the first 256 shares: (''x''<sub>0</sub>, ''y''<sub>0</sub>) through (''x''<sub>255</sub>, ''y''<sub>255</sub>). Applications needing more than 256 shares must use some other encoding scheme.
 
-# Construct a 34-byte payload as follows:
-#* Byte 0 is <code>0xF6</code> if the private key is in compressed format; else, byte 0 is <code>0xF4</code>.
+# Construct a (2+''L''/8)-byte payload as follows:
+#* Byte 0 is the ''prefix byte'', as enumerated in the table below.
 #* Byte 1 is ''j'' for 0 ≤ ''j'' &lt; 256.
-#* Bytes 2–33 are the 256-bit binary encoding of ''y''<sub>''j''</sub> in big-endian byte order, for 0 ≤ ''j'' &lt; 256.
-# Encode the payload using Base58Check with an application/version byte of <code>0x26</code>.
+#* The remainder of the payload is the ''L''-bit binary encoding of ''y''<sub>''j''</sub> in big-endian byte order, for 0 ≤ ''j'' &lt; 256.
+# Encode the payload using Base58Check with an application/version byte as indicated in the table below.
+
+{|
+!Secret Type
+!''L''
+!Application/<br/>Version Byte
+!Prefix Byte
+|-
+|Uncompressed private key
+|align="right"|256
+|align="center"|<code>0x26</code>
+|align="center"|<code>0xF4</code>
+|-
+|Compressed private key
+|align="right"|256
+|align="center"|<code>0x26</code>
+|align="center"|<code>0xF6</code>
+|-
+|rowspan="3"| [https://github.com/bitcoin/bips/blob/master/bip-0032.mediawiki BIP32] master seed
+|align="right"|128
+|align="center"|<code>0x15</code>
+|align="center"|<code>0x3B</code>
+|-
+|align="right"|256
+|align="center"|<code>0x26</code>
+|align="center"|<code>0xF8</code>
+|-
+|align="right"|512
+|align="center"|<code>0x83</code>
+|align="center"|<code>0x27</code>
+|}
 
 == Motivation ==
 
@@ -77,14 +112,7 @@ Shamir's Secret Sharing Scheme can be used in conjunction with the multi-signatu
 
 It is anticipated that 256 shares will be more than enough for most applications of Shamir's Secret Sharing Scheme to Bitcoin private keys. Thus, to reduce encoded share size, the encoding of ''j'' is restricted to one byte.
 
-The application/version byte (<code>0x26</code>) and the prefix byte (<code>0xF6</code> or <code>0xF4</code>) were chosen to force the initial characters in the Base58Check encoding to "SS", which can be taken as standing for "Shamir Share."
-* '''Compressed private key share''' (application/version = <code>0x26</code>, prefix = <code>0xF6</code>)
-** Lower bound (''j'' = 0)
-*** Value: <code>0x26F6000000000000000000000000000000000000000000000000000000000000000000</code>
-*** Base58Check encoding: <code>SSSJ5cf1K6GpL4F6avjp9LvaqEgoHJoVYfGAz1gbGKfv1NZ6DvNKn</code>
-** Upper bound (''j'' = 255)
-*** Value: <code>0x26F6FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF</code>
-*** Base58Check encoding: <code>SSasiBpNDGRjU2m7MUpD396gKV7zw9DmGpho7a8wMp9fiet8n1199</code>
+The application/version bytes and prefix bytes were chosen to force the initial characters in the Base58Check encoding to "SS", which can be taken as standing for "Shamir Share."
 * '''Uncompressed private key share''' (application/version = <code>0x26</code>, prefix = <code>0xF4</code>)
 ** Lower bound (''j'' = 0)
 *** Value: <code>0x26F4000000000000000000000000000000000000000000000000000000000000000000</code>
@@ -92,24 +120,52 @@ The application/version byte (<code>0x26</code>) and the prefix byte (<code>0xF6
 ** Upper bound (''j'' = 255)
 *** Value: <code>0x26F4FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF</code>
 *** Base58Check encoding: <code>SSHiT3VeQv7uC5j5pNfRFYkVLzFbdUPDpVpYrTEFAqCAJ6DjjxkTg</code>
+* '''Compressed private key share''' (application/version = <code>0x26</code>, prefix = <code>0xF6</code>)
+** Lower bound (''j'' = 0)
+*** Value: <code>0x26F6000000000000000000000000000000000000000000000000000000000000000000</code>
+*** Base58Check encoding: <code>SSSJ5cf1K6GpL4F6avjp9LvaqEgoHJoVYfGAz1gbGKfv1NZ6DvNKn</code>
+** Upper bound (''j'' = 255)
+*** Value: <code>0x26F6FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF</code>
+*** Base58Check encoding: <code>SSasiBpNDGRjU2m7MUpD396gKV7zw9DmGpho7a8wMp9fiet8n1199</code>
+* '''128-bit BIP32 master seed share''' (application/version = <code>0x15</code>, prefix = <code>0x3B</code>)
+** Lower bound (''j'' = 0)
+*** Value: <code>0x153B0000000000000000000000000000000000</code>
+*** Base58Check encoding: <code>SS7tk2Xa85gF7WHbvv7GXsGjBeDcJNb</code>
+** Upper bound (''j'' = 255)
+*** Value: <code>0x153BFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF</code>
+*** Base58Check encoding: <code>SSPdma7gckshfcALbrcpUZ7C1QtuUkq</code>
+* '''256-bit BIP32 master seed share''' (application/version = <code>0x26</code>, prefix = <code>0xF8</code>)
+** Lower bound (''j'' = 0)
+*** Value: <code>0x26F8000000000000000000000000000000000000000000000000000000000000000000</code>
+*** Base58Check encoding: <code>SSjTLkyj7Saec1H882tbvwGmojZCaye2zz9RF8bHTJdRRwDSN92o2</code>
+** Upper bound (''j'' = 255)
+*** Value: <code>0x26F8FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF</code>
+*** Base58Check encoding: <code>SSt2yL961cjZjyo8taxzpjSsHyzQEp4Jj9b3Nh3dYo7B9DYYw7Q32</code>
+* '''512-bit BIP32 master seed share''' (application/version = <code>0x83</code>, prefix = <code>0x27</code>)
+** Lower bound (''j'' = 0)
+*** Value: <code>(0x832700 << 512)</code>
+*** Base58Check encoding: <code>SSR5aFuNgk5pzpFUwVL8oPSrEc3SiGtnCY3HwakZhYfbdkMLHu4LpvTFgrPjMEyUDRfRNn6RmgqsM9bkLWcWmQvypLFWqvoEu</code>
+** Upper bound (''j'' = 255)
+*** Value: <code>(0x832800 << 512) − 1</code>
+*** Base58Check encoding: <code>SSTdQESLSq6N4nCEW252e7PPVVXyWmg8fudNAV6Hgi3QLwda9V3YLr6A4wwLXktSrDi2LLZLtz3AVriApL4gZTmYFZkrk3LH9</code>
 
 == Reference Implementation ==
 
 === Test Vectors ===
 
-* '''Compressed private key, ''M'' = 3''' (first 6 shares)
-** Private key: <code>L4Shamir4KSghoE4uGhHJMFiG2ZrXRXydMgFvCUaCLgXQ88YKBMz</code>
-** Share 0: <code>SSSKbWKpvHA2WRrGN7jEtZbSWCd8Jbk3NpBeaPzdGmHmVFHYJQY4H</code>
-** Share 1: <code>SSSLUn6EgRoQK6CxirHqtbpjmmTEXpbRnWJ3FMbJnY5rzd3bzmKoZ</code>
-** Share 2: <code>SSSNNMjoMehQk4SZXbQr6jZYkHRtGtYxxmD83hjUDtyGd1oic4Nmn</code>
-** Share 3: <code>SSSRGFGWwwr3oLZ4nM6FWxosRkZ5XoceuavtySR7aqwzNRZknFJUk</code>
-** Share 4: <code>SSSTDhWA1HPtohQeuQRUXHcPDUSa3kfp2t8SDSewtoifFqbbH4Dmc</code>
-** Share 5: <code>SSSUEiSiXfLwm91KtmQX7hy67T6MpjiSLeojmiSy9nHHHFuAAwmKs</code>
 * '''Uncompressed private key, ''M'' = 4''' (first 6 shares)
 ** Private key: <code>5KShamir9pqYHfa63F2r9iA44sK4iDdo2gtyAXHCSRwuCLdqgCv</code>
-** Share 0: <code>SS9973ZqpD3pKAC9SnF4dQHKPA9Xp1niYXDRTKMAVcdJm4Ef4NF2Z</code>
-** Share 1: <code>SS9BqymBhhzCwYzoUPeK1EkDMqsKoYrX3bN76VtQ5S9KQdxDnAXGN</code>
-** Share 2: <code>SS9DVVQo3JarVNXu2c1SpQ66TNGt8z9WUtbMPNSXAz5Re5khtN3vR</code>
-** Share 3: <code>SS9EhcXkmQ8NGq66ZgGqg5EGiYVeeG2pz6o9w2LqY3dST5GbogdWK</code>
-** Share 4: <code>SS9J58KPGRknHN5t7aHSoT3Nnt3KQ7zJH1CS9fuwtyJXpJrmczbWF</code>
-** Share 5: <code>SS9LNaSJaj3rUjYGy9AUZiY5XoGqit9hK73L2AWa4PhnmShRZ119a</code>
+** Share 0: <code>SS98uzUKLiL29zS43nEVxmr3SMbzdqZ1WguKUeCLxM4yijBfSKFZH</code>
+** Share 1: <code>SS9BS6Wxu8A2x2YawoBSfWdSrLta5uJ3xYT8GxzBWWRhntMg8sgEe</code>
+** Share 2: <code>SS9DudHes1jHhn1o3waDw7RDiR4fwMoEcLwciZuw3bruTaZBo7R2S</code>
+** Share 3: <code>SS9G8VxBXixXmhYnetNKtmYxRpxwC7w2Jo6kTC3DJRYNHF8X7oFEs</code>
+** Share 4: <code>SS9HtdgMCbkWWFrg3JXEfgNFPqRzr6ZstbeV8aRe1mdspKRUoLeMV</code>
+** Share 5: <code>SS9JywdxAz1yFueZVrzSP3Ch1hJVuCaGCTJnQU8pvSKDdEnDDbvEr</code>
+* '''Compressed private key, ''M'' = 3''' (first 6 shares)
+** Private key: <code>L4Shamir4KSghoE4uGhHJMFiG2ZrXRXydMgFvCUaCLgXQ88YKBMz</code>
+** Share 0: <code>SSSJXZMWunNpByN37VeyyFWmL7k6DgsY12Dn1oQsbJaJKqxqRSQN6</code>
+** Share 1: <code>SSSMfRCVsE5ZTqSir7p4Er2ptPzQ2BShxaMR9j2LRqipLKz9nXfEB</code>
+** Share 2: <code>SSSPHtSpbSKF7zD4v9UX3QZspLXkEGNGr5J61EowGU8TBJQdpnahP</code>
+** Share 3: <code>SSSRMiGiYSwHqentuHYwzw5EidkP6kkvFcNiPTky5m6ZqmxcCspmm</code>
+** Share 4: <code>SSSRv9VxGE6Gwc4PDq8mVRbazbG4NqVxb6GNVGt8u9KoLjukFAZT1</code>
+** Share 5: <code>SSSUrgUzeqV3nJHB3C38kt3ZqbqGa8pm2hcuvvA2fmQseDidsmQfm</code>
