correct prefix byte numbers in payload

--- a/bip-xxxx.mediawiki
+++ b/bip-xxxx.mediawiki
@@ -53,13 +53,11 @@ This proposal is hereby placed in the public domain.
 
 === Encoding of Shares ===
 
-This encoding scheme is applicable to the first 256 shares: (''x''<sub>0</sub>, ''y''<sub>0</sub>) through (''x''<sub>255</sub>, ''y''<sub>255</sub>). Applications needing more than 256 shares must use some other encoding scheme.
-
 # Construct a (8+''L''/8)-byte payload as follows:
-#* Byte 0 is the ''prefix byte'', as enumerated in the table below.
-#* Byte 1 is ''j'' for 0 ≤ ''j'' &lt; 256.
-#* Byte 2 is ''M'' for 0 ≤ ''M'' &lt; 256.
-#* Byte 3 - 6 is Hash<sub>''L''</sub>(''K'')
+#* Byte 0 and 1 are the ''prefix bytes'', as enumerated in the table below.
+#* Byte 2 is ''j'' for 0 ≤ ''j'' &lt; 256.
+#* Byte 3 is ''M'' for 0 ≤ ''M'' &lt; 256.
+#* Byte 4 - 7 is Hash<sub>''L''</sub>(''K'')
 #* The remainder of the payload is the ''L''-bit binary encoding of ''y''<sub>''j''</sub> in big-endian byte order, for 0 ≤ ''j'' &lt; 256.
 # Encode the payload using Base58Check with an application/version byte as indicated in the table below.
 
@@ -68,8 +66,8 @@ The application/version bytes and prefix bytes were chosen to force the initial 
 {|
 !Secret Type
 !''L''
-!Application/<br/>Version Byte
-!Prefix Byte
+!Prefix Byte 1
+!Prefix Byte 2
 |-
 |Uncompressed private key
 |align="right"|256
